# mikeintosh-xforms

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: api.py  settings.py  urls.py  views.py
forms/: admin.py  api.py  models.py  tests.py
forms/migrations/: 0001_initial.py  0002_form_xls_form.py  0003_formsubmission_user.py
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  components.d.ts  main.js  main.ts  style.css  test-setup.ts
frontend/src/api/: forms.test.ts  forms.ts
frontend/src/components/: FileModal.vue
frontend/src/components/ui/: Button.vue  Card.vue  CardHeader.vue  FormField.vue  Input.vue  Link.vue  Modal.vue  README.md  Snackbar.vue  StatusText.vue  Table.vue  TableCell.vue  TableHeader.vue  Textarea.vue  Tooltip.vue  index.ts
frontend/src/router/: index.ts
frontend/src/types/: odk-web-forms.d.ts
frontend/src/views/: FormCreateView.test.ts  FormCreateView.vue  FormEditView.test.ts  FormEditView.vue  FormListView.test.ts  FormListView.vue  FormSubmitView.test.ts  FormSubmitView.vue  XLSPlayView.vue
templates/: index.html
tests/e2e/: conftest.py  test_smoke.py
